--- a/.github/workflows/build_switch.yml
+++ b/.github/workflows/build_switch.yml
@@ -1,6 +1,8 @@
 name: Switch
 # Run this workflow every time a new commit pushed to your repository
 on: push
+    schedule:
+      - cron: '0 0 * * 0' # Once per week on Sunday 00:00
 
 jobs:
   build-switch:
