--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -1,8 +1,8 @@
 name: Windows
 # Run this workflow every time a new commit pushed to your repository
 on: 
-  - push
-  - schedule:
+   push
+   schedule:
       - cron: '0 0 * * 0' # Once per week on Sunday 00:00
 
 jobs:
