Another attempt at fixing CI schdule yaml syntax

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -1,7 +1,7 @@
 name: Windows
 # Run this workflow every time a new commit pushed to your repository
 on: 
-   push
+   push:
    schedule:
       - cron: '0 0 * * 0' # Once per week on Sunday 00:00
 
