Added CI syntax fix to all Workflows

--- a/.github/workflows/build_3ds.yml
+++ b/.github/workflows/build_3ds.yml
@@ -1,7 +1,8 @@
 name: 3DS
 # Run this workflow every time a new commit pushed to your repository
-on: push
-    schedule:
+on: 
+  push:
+  schedule:
       - cron: '0 0 * * 0' # Once per week on Sunday 00:00
 
 jobs:
