--- a/.github/workflows/build_macos.yml
+++ b/.github/workflows/build_macos.yml
@@ -1,6 +1,7 @@
 name: macOS
 # Run this workflow every time a new commit pushed to your repository
-on: push
+on: 
+    push:
     schedule:
       - cron: '0 0 * * 0' # Once per week on Sunday 00:00
 
