--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Build
         working-directory: build/iOS
         run: |
-          xcodebuild -project Plutoboy.xcodeproj -target Plutoboy -arch "arm64" ONLY_ACTIVE_ARCH=NO
+          xcodebuild -project Plutoboy.xcodeproj -target Plutoboy -arch "arm64" ONLY_ACTIVE_ARCH=NO CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGN_ENTITLEMENTS="" CODE_SIGNING_ALLOWED="NO"
