--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -61,7 +61,8 @@ jobs:
        uses: actions/checkout@v2
       - 
        name: Build
-       run: | 
+       run: |
+         sudo apt-get update 
          sudo apt-get --yes --no-install-recommends install binfmt-support qemu-user-static 
          docker build -t plutoboy -f build/Unix/ARM/Dockerfile .
          docker run -e cc=gcc -e framework=SDL2 -e mode=release -v $(pwd):/mnt plutoboy
@@ -86,6 +87,7 @@ jobs:
       - 
        name: Build
        run: | 
+         sudo apt-get update 
          sudo apt-get --yes --no-install-recommends install binfmt-support qemu-user-static 
          docker build -t plutoboy -f build/Unix/ARM/Dockerfile .
          docker run -e cc=gcc -e framework=SDL -e mode=release -v $(pwd):/mnt plutoboy
